cabal-version:       >=1.10
name:                serpens
version:             0.1.0.0
synopsis:            A little game featuring a serpens navigating obstacles
license-file:        LICENSE
author:              Philipp Middendorf <pmidden@mailbox.org>
build-type:          Simple

executable serpens
  main-is:             Main.hs
  other-modules:       Serpens.Types
                     , Serpens.Util
  build-depends:       base >=4.12 && <4.13
                     , text
                     , gloss
                     , bytestring
                     , lens
                     , linear
                     , time
                     , bifunctors
                     , containers
                     , vector
                     , pretty-simple
                     , bytestring-to-vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -threaded -O2
  build-tools:         hlint
                     , hindent
                     , cabal-install

