cabal-version:       >=1.10
name:                serpens
version:             1.0
synopsis:            A little game featuring a serpens navigating obstacles
license-file:        LICENSE
author:              Philipp Middendorf <pmidden@mailbox.org>
build-type:          Simple

executable serpens
  main-is:             Main.hs
  other-modules:       Serpens.Types
                     , Serpens.Util
                     , Serpens.BitmapFont
  build-depends:       base >=4.12 && <4.13
                     , text
                     , gloss
                     , gloss-juicy
                     , filepath
                     , bytestring
                     , lens
                     , linear
                     , time
                     , bifunctors
                     , containers
                     , vector
                     , pretty-simple
                     , bytestring-to-vector
                     , chronos
                     , torsor
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -threaded -O2 -rtsopts
  build-tools:         hlint
                     , hindent
                     , cabal-install

